versioned_docs/version-2.11/reference/subsystems/setuptools.mdx
---
title: setuptools
description: |
  Python setuptools, used to package `python_distribution` targets.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Python setuptools, used to package `python_distribution` targets.

Backend: <span className="color--primary">`pants.backend.python`</span>

Config section: <span className="color--primary">`[setuptools]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--setuptools-version=<str>`}
  env_repr='PANTS_SETUPTOOLS_VERSION'
  toml_repr={`[setuptools]
version = <str>`}
  default_repr={`setuptools>=50.3.0,<58.0`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--setuptools-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SETUPTOOLS_EXTRA_REQUIREMENTS'
  toml_repr={`[setuptools]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "wheel>=0.35.1,<0.38"\n]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `lockfile`

<Option
  cli_repr={`--setuptools-lockfile=<str>`}
  env_repr='PANTS_SETUPTOOLS_LOCKFILE'
  toml_repr={`[setuptools]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.11.1/src/python/pants/backend/python/subsystems/setuptools.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants generate-lockfiles --resolve=setuptools`.

As explained at https://www.pantsbuild.org/v2.11/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
